# year3

DP/Lab1/: Main.java
DP/module1/go/: task.go
Lab1/: Main.java  TaskA.java  TaskB.java
OOP/Lab1/data/: Compartment.txt  Lux.txt  Menu.txt  Parlor.txt  Private.txt
OOP/Lab1/src/: DatabaseOperator.java  Main.java  PassengerWagonFactory.java  WagonLoader.java
OOP/Lab1/src/Wagons/: CompartmentWagon.java  LuxWagon.java  PassengerWagon.java  PrivateWagon.java
OOP/Lab1MavenNewTry/data/: Menu.txt
OOP/Lab1MavenNewTry/src/main/java/: BasicWagonInfo.java  DatabaseOperator.java  DatabaseOperatorTest.java  Locomotive.java  Main.java
OS/Lab1/: Client.cpp  Client.h  Server.h  main.cpp
OS/Lab2Maven/: Summary-Processes  Summary-Results  pom.xml
Ruby/Lab1/: task.rb
Ruby/Lab2/: task1.rb  task2.rb  task3.rb  task4.rb
Ruby/Lab3/: task1.rb  task2.rb  task3.rb  task4.rb
Ruby/module1/: task1.rb  task2.rb  test1.rb  test2.rb
Ruby/zalik/: task.rb  tests.rb
sem2/OOP/fleet-system/: pom.xml
sem2/OOP/fleet/fleet-system/: .gitignore  fleet.xml  pom.xml
sem2/OOP/fleet/frontend/: angular.json  package-lock.json  package.json  pom.xml
sem2/OOP/lab2Back/: pom.xml
sem2/OOP/lab2Front/src/: App.jsx
sem2/compilers/lab1/dragon-tiger/: test
sem2/compilers/lab1/dragon-tiger/automata/: proof.txt
sem2/compilers/lab2/dragon-tiger/: configure  configure.ac  run  test.tig
sem2/compilers/lab2/dragon-tiger/src/parser/: Makefile.am  Makefile.in  tiger_lexer.ll  tiger_parser.yy
sem2/crypto/lab1/: main.py
sem2/crypto/lab2/: main.py
sem2/fleet-system/: pom.xml
(+165 files in other folders)
